--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>google</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<!-- header start -->
-    <header class="container">
-        <img src="/images/google.jpg" alt="Google Icon">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    </header>
-<!-- header finish -->
-    <section class="container">
-        <p><button>Search</button></p> <br>
-        <button class="small"> I feel lucky</button>
-        <button class="small">Google Search</button>
-    </section>
-    <br>
-    <footer>
-        <button>Todays News</button>
-        <button>About Google</button>
-        <button>Whats New</button>
-        <button>Thanks to Google</button>
-    </footer>
-</body>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+
+    <title>Ana sayfa</title>
+  </head>
+  <body>
+    <div class="container">
+    <div class="row">
+        <div class="col-sm-4 bg-primary border border-dark">
+             <h2>Biz Kimiz</h2>
+        </div>
+         <div class="col-sm-4 bg-secondary border border-dark">
+           <a href=" urunler.html"> <h2 class="a">Ürünlerimiz</h2></a>
+        </div>
+        <div class="col-sm-4 bg-success border border-dark">
+            <h2>Bize Ulaşın</h2>
+        </div>
+
+
+
+    </div>
+
+
+        
+    </div>
+
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+  </body>
 </html>
